# yawlmost

./: .gitignore  README.md  pyproject.toml
mattermost/: Vagrantfile
mattermost/ansible/: ansible.cfg  inventory.ini  playbook.yml
mattermost/ansible/group_vars/: all.yml
mattermost/ansible/roles/docker/: README.md
mattermost/ansible/roles/docker/meta/: main.yml
mattermost/ansible/roles/docker/tasks/: main.yml
mattermost/ansible/roles/docker/vars/: main.yml
mattermost/ansible/roles/glusterfs/: README.md
mattermost/ansible/roles/glusterfs/meta/: main.yml
mattermost/ansible/roles/glusterfs/tasks/: main.yml  mount_volume.yml  remove.yml  requirements.yml  setup_bricks.yml  setup_peers.yml  setup_volume.yml
mattermost/ansible/roles/glusterfs/vars/: main.yml
mattermost/ansible/roles/mattermost/: README.md
mattermost/ansible/roles/mattermost/defaults/: main.yml
mattermost/ansible/roles/mattermost/meta/: main.yml
mattermost/ansible/roles/mattermost/tasks/: main.yml  volume.yml
mattermost/ansible/roles/mattermost/templates/: .env.j2  docker-compose.yml  docker-stack.yml  mattermost.yml  traefik.yml
mattermost/ansible/roles/mattermost/vars/: main.yml
mattermost/ansible/roles/portainer/: README.md
mattermost/ansible/roles/portainer/defaults/: main.yml
mattermost/ansible/roles/portainer/meta/: main.yml
mattermost/ansible/roles/portainer/tasks/: main.yml
mattermost/ansible/roles/proxy/: README.md
mattermost/ansible/roles/proxy/meta/: main.yml
mattermost/ansible/roles/swarm/: README.md
mattermost/ansible/vault/: main.yml  main.yml.example
(+17 files in other folders)
