[tool.poetry]
name = "yawlmost"
version = "0.1.0"
description = "Yawl Mattermost"
authors = ["Bob Nicholson <yawl.foss@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ansible = "^10.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
